--- a/myVivaio/css/style.css
+++ b/myVivaio/css/style.css
@@ -1,1 +1,47 @@
 /*Vivaio*/
+
+body {
+	background-color: #ccf0d4;
+	background-image: url();
+	scrollbar-arrow-color: #aaa7a8;
+	scrollbar-3dlight-color:#4b3c40;
+	scrollbar-highlight-color:#aaa7a8;
+	scrollbar-face-color: #4b3c40;
+	scrollbar-shadow-color:#4b3c40;
+	scrollbar-darkshadow-color:#4b3c40;
+	scrollbar-track-color: #4b3c40;
+}
+
+/*HOMEPAGE - TESTO SU IMMAGINE*/
+
+.passiflora {
+  margin: 0px;
+  background-image: url('http://i.imgur.com/guFnhM6.png');
+  background-repeat: no-repeat;
+  background-color: none;
+  font-size: 300%;
+  font-family: "Barrio";
+  font-weight: normal;
+  color: #0f3c27; 
+  text-align: center; 
+  text-shadow: -2px 0px 3px rgba(150, 150, 150, 1);
+  line-height: 620px; 
+  width: 1202px;
+  height: 574px;          
+}
+
+
+/*STILI FOOTER*/
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 32px;
+    background-color: #72a374;
+}
+
+.footer_uno{
+	color: #185639;
+	text-align: center; 
+	margin-top: 5px; 
+}S
