--- a/myVivaio/css/style.css
+++ b/myVivaio/css/style.css
@@ -1,5 +1,12 @@
 /*Vivaio*/
 
+
+/*CENTRO IL TITOLO*/
+.titolo{
+	margin-left:260px;
+}
+
+
 body {
 	background-color: #ccf0d4;
 	background-image: url();
