--- a/myVivaio/css/style.css
+++ b/myVivaio/css/style.css
@@ -1,16 +1,16 @@
 /*Vivaio*/
 /*NAVBAR*/
-.navbar-static-top {
+/*.navbar-static-top {
     border-width: 1px;
-}
+}*/
 
-.navbar-header{
+/*.navbar-header{
   border-radius: 3px;
-}
-h6 {
+}*/
+/*h6 {
   font-size: 50px;
   color:red;
-}
+}*/
 #footer{
   padding:5px;
 }
