--- a/myVivaio/css/style.css
+++ b/myVivaio/css/style.css
@@ -1,148 +1,121 @@
 /*Vivaio*/
-/*NAVBAR*/
-/*.navbar-static-top {
-    border-width: 1px;
-}*/
 
-/*.navbar-header{
-  border-radius: 3px;
-}*/
-/*h6 {
-  font-size: 50px;
-  color:red;
-}*/
-#footer{
-  padding:5px;
-}
-.featurette-heading{
-  margin-top: 0px;
-}
-.lead{
-  font-size: 20px;
-}
-.featurette-image{
-  padding-top: 50px;
-}
-.white{
-  background-color: white;
-  border-radius: 4px;
-}
-span{
-  color: #003399;
-}
-.blue{
-  color: #003399;
-}
-.sfo_blue{
-  background-color: #003399;
-}
-#navbar{
-  font-size: 18px;
-}
-#app{
-  display: none;
-}
-form #alert{
-  color:red;
-  width: 700;
-  font-family: italic;
-}
-.larg{
-  min-width: 300px;
-  height: 30px;
-}
-.test{
-  width: 300px;
-  height: 100px;
-}
-textarea{
-  width: 150px;
-  height: 50px;
-}
-h6{
-  color: red;
-  font-size: 25px;
-}
-table tr,table td{
-  word-wrap: break-word;
-}
-.text-muted{
-  font-size: 25px;
-  text-align: center;
-}
-.bord_top{
-  padding-top: 100px;
-}
-.form-control{
-  text-align: center;
-}
-.navbar-inverse .navbar-toggle {
-    border-color: #333;
-}
-.featurette-heading{
-  font-size: 33px;
-}
-.lead{
-  font-size: 17px;
-}
-#sfondo{
-  background-image: url("../img/sfondo.jpg");
-}
-.bord{
-  border-radius: 6px;
-}
-
-/*LOGIN*/
+body {
+  background-image: url(https://31.media.tumblr.com/f0d19d79ded8938201c961fe9571b0eb/tumblr_inline_nrhhjk9ltH1qid2nw_500.gif);
+  /*background-color: #ccf0d4;*/
+  /*background-image: url();*/
+  scrollbar-arrow-color: #aaa7a8;
+  scrollbar-3dlight-color:#4b3c40;
+  scrollbar-highlight-color:#aaa7a8;
+  scrollbar-face-color: #4b3c40;
+  scrollbar-shadow-color:#4b3c40;
+  scrollbar-darkshadow-color:#4b3c40;
+  scrollbar-track-color: #4b3c40;
+  }
 
 
 /*CENTRO IL TITOLO*/
 .titolo{
-	margin-left:260px;
-}
-
-
-body {
-	background-color: #ccf0d4;
-	background-image: url();
-	scrollbar-arrow-color: #aaa7a8;
-	scrollbar-3dlight-color:#4b3c40;
-	scrollbar-highlight-color:#aaa7a8;
-	scrollbar-face-color: #4b3c40;
-	scrollbar-shadow-color:#4b3c40;
-	scrollbar-darkshadow-color:#4b3c40;
-	scrollbar-track-color: #4b3c40;
+  position: relative;
+  font-size: 480%;
+  font-family: "Barrio";
+ 
+  margin-left:300px;
+  text-shadow: -2px 0px 3px rgba(150, 150, 150, 1);
 }
 
 /*HOMEPAGE - TESTO SU IMMAGINE*/
 
 .passiflora {
-  margin: 0px;
+  margin:0px;
   background-image: url('http://i.imgur.com/guFnhM6.png');
   background-repeat: no-repeat;
+  width:1202px;
+  height:574px;
   background-color: none;
-  font-size: 300%;
-  font-family: "Barrio";
   font-weight: normal;
   color: #0f3c27; 
-  text-align: center; 
-  text-shadow: -2px 0px 3px rgba(150, 150, 150, 1);
-  line-height: 620px; 
-  width: 1202px;
-  height: 574px;          
+  text-align: center;
 }
+
+.navbar-wrapper{
+  width: 300px !important; 
+  font-family:"helvetica";
+  font-size:12px;
+}
+
 
 
 /*STILI FOOTER*/
 footer {
     position: absolute;
     bottom: 0;
-    width: 100%;
+    /*width: 100%;*/
     height: 32px;
     background-color: #72a374;
 }
 
 .footer_uno{
-	color: #185639;
-	text-align: center; 
-	margin-top: 5px; 
-}S
+  color: #185639;
+  margin-top:6px;
+  text-align: center; 
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 12px; 
+  height: auto;
+}
+
+
+
+
+*{border-radius:0px!important; 
+  -moz-border-radius:0px!important; 
+  -webkit-border-radius:0px!important; 
+  border:none!important }
+/*Override BS*/
+
+.navbar-nav > li {
+    padding-top: 0px!important;
+    padding-bottom: 0px!important;
+}
+.navbar-default .navbar-nav > li > a {padding-left:15px; padding-right: 15px}
+.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{padding-top:15px!important;padding-bottom:15px}
+
+
+#menu {
+  margin-left: 300px;
+}
+
+.navbar-default {
+background-color: transparent;
+border-color: none;
+}
+
+.navbar-nav > li{padding-top:15px; padding-bottom:15px}
+
+.navbar-nav {
+display: table;
+float: none;
+margin: 0 auto;
+table-layout: fixed;
+font-family: 'Fira Sans Condensed', sans-serif;
+font-size: 18px;
+}
+
+.navbar-nav > li:after {
+content: " •";
+font-family: "verdana";
+color: #20401A;
+float: right;
+display: block;
+z-index: 999;
+position: relative;
+font-size: 20px;
+margin-top: -40px;
+margin-right: -4px;
+}
+
+.navbar-nav > li:last-child:after{content:"";}
+
+@media (max-width: 767px) {
+ .navbar-nav > li:after{content: ""!important}
+}
