--- a/myVivaio/css/esternoStyle.css
+++ b/myVivaio/css/esternoStyle.css
@@ -57,3 +57,20 @@
   color: #0f3c27; 
   
 }
+
+
+.sfondoDue{
+	background-image: url(https://31.media.tumblr.com/f0d19d79ded8938201c961fe9571b0eb/tumblr_inline_nrhhjk9ltH1qid2nw_500.gif);
+	box-shadow:2px 2px rgba(0,0,0,0.2);
+	border: 0.5px dotted #8C7D63;
+	width: 150px; 
+	height: 40px; 
+}
+
+
+.testo{
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 14px;
+  text-align: justify;
+  text-justify: inter-word;
+}
