--- a/myVivaio/css/style.css
+++ b/myVivaio/css/style.css
@@ -1,60 +1,10 @@
 /*Vivaio*/
 .center{text-align: center}
-/*DROPMENU*/
-/* Dropdown Button */
-.dropbtn {
-    background-color: none;
-    color: #aaa7a8;
-    /*padding: 16px;*/
-    /*font-size: 16px;*/
-    border: none;
-    cursor: pointer;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-    color: #4b3c40;
-}
-
-
-
 
 /***************************/
 body {
   background-image: url(https://31.media.tumblr.com/f0d19d79ded8938201c961fe9571b0eb/tumblr_inline_nrhhjk9ltH1qid2nw_500.gif);
-  /*background-color: #ccf0d4;*/
+  background-color: #ccf0d4;
   /*background-image: url();*/
   scrollbar-arrow-color: #aaa7a8;
   scrollbar-3dlight-color:#4b3c40;
@@ -125,49 +75,3 @@ footer {
   border:none!important }
 /*Override BS*/
 
-.navbar-nav > li {
-    padding-top: 0px!important;
-    padding-bottom: 0px!important;
-}
-.navbar-default .navbar-nav > li > a {padding-left:15px; padding-right: 15px}
-.navbar-default .navbar-nav > li > a, .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus{padding-top:15px!important;padding-bottom:15px}
-
-
-#menu {
-  margin-left: 300px;
-}
-
-.navbar-default {
-background-color: transparent;
-border-color: none;
-}
-
-.navbar-nav > li{padding-top:15px; padding-bottom:15px}
-
-.navbar-nav {
-display: table;
-float: none;
-margin: 0 auto;
-table-layout: fixed;
-font-family: 'Fira Sans Condensed', sans-serif;
-font-size: 18px;
-}
-
-.navbar-nav > li:after {
-content: " •";
-font-family: "verdana";
-color: #20401A;
-float: right;
-display: block;
-z-index: 999;
-position: relative;
-font-size: 20px;
-margin-top: -40px;
-margin-right: -4px;
-}
-
-.navbar-nav > li:last-child:after{content:"";}
-
-@media (max-width: 767px) {
- .navbar-nav > li:after{content: ""!important}
-}
